# templates

bun-anchor-codama/: .gitignore  .prettierignore  AGENTS.md  Anchor.toml  Cargo.toml  README.md  codama.js  package.json  tsconfig.json  vitest.config.ts
bun-anchor-codama/.github/actions/setup/: action.yml
bun-anchor-codama/.github/workflows/: ci.yaml
bun-anchor-codama/clients/js/: README.md  package.json  tsup.config.ts
bun-anchor-codama/clients/js/src/: index.ts
bun-anchor-codama/clients/js/src/helpers/: get-program-accounts-decoded.ts  get-program-accounts.ts
bun-anchor-codama/clients/js/test/: _setup.ts
bun-anchor-codama/programs/solana_starter/: Cargo.toml
bun-anchor-codama/programs/solana_starter/src/: error.rs  lib.rs
bun-anchor-codama/programs/solana_starter/src/instructions/: mod.rs
bun-anchor-codama/scripts/: utils.mjs
bun-anchor-codama/scripts/ci/: set-env.mjs
bun-anchor-codama/tests/: basic.test.ts  helpers.ts
bun-library/: README.md  package.json
bun-monorepo/: AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  bunfig.toml  cspell.config.mts  package.json  turbo.json
bun-monorepo/.github/workflows/: ci.yaml
bun-monorepo/apps/api/: wrangler.jsonc
bun-monorepo/apps/api/src/: api.ts  http.ts
bun-monorepo/apps/web/: .env.example  index.html  package.json  wrangler.jsonc
bun-monorepo/apps/web/src/: env.ts
bun-monorepo/turbo/generators/: config.ts  generator-app.ts
bun-monorepo/turbo/generators/templates/app/base/: package.json.hbs
bun-monorepo/turbo/generators/templates/app/base/src/: index.ts.hbs
